[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/ui/BeatSageUI/BeatSageRequest/BeatSageRequest.gd" type="Script" id=1]

[node name="BeatSageRequest" type="Node"]
script = ExtResource( 1 )

[node name="CreateRequest" type="HTTPRequest" parent="."]

[node name="HeartbeatRequest" type="HTTPRequest" parent="."]

[node name="DownloadRequest" type="HTTPRequest" parent="."]

[node name="YouTubeMetadataRequest" type="HTTPRequest" parent="."]

[node name="HeartbeatTimer" type="Timer" parent="."]
one_shot = true

[connection signal="request_completed" from="CreateRequest" to="." method="_on_CreateRequest_request_completed"]
[connection signal="request_completed" from="HeartbeatRequest" to="." method="_on_HeartbeatRequest_request_completed"]
[connection signal="request_completed" from="DownloadRequest" to="." method="_on_DownloadRequest_request_completed"]
[connection signal="request_completed" from="YouTubeMetadataRequest" to="." method="_on_YouTubeMetadataRequest_request_completed"]
[connection signal="timeout" from="HeartbeatTimer" to="." method="_on_HeartbeatTimer_timeout"]
